<resources>
    <string name="app_name">INAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_icon">main_icon</string>
    <string name="sign_in_with_google">Вход через Google</string>
    <string name="continue_with_apple">Продолжить с Apple</string>
    <string name="continue_with_vk">Продолжить с VK</string>
    <string name="google_icon">google icon</string>
    <string name="apple_icon">apple icon</string>
    <string name="vk_icon">vk icon</string>
    <string name="choose_account">Выберите Аккаунт</string>
    <string name="for_work_with_inai">Для работы с приложением INAI</string>
    <string name="users_photo">users photo</string>
    <string name="inai">INAI</string>
    <string name="inai_gmail_com">INAI@gmail.com</string>
    <string name="account_icon">account icon</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="info_conf">Чтобы вы могли продолжать, мы передадим ваше имя, адрес электронной почты и фото профиля приложению INAI. Прежде чем использовать его ознакомьтесь с этими документами:Политика и конфиденциальности и условия использования</string>
    <string name="images_of_onboard">images of onBoard</string>
    <string name="dear__">Дорогие гурманы и сладкоежки!</string>
    <string name="image">image</string>
    <string name="list_of_workers">Список сотрудников</string>
    <string name="list_of_products">Список изделий</string>
    <string name="about_us">О нас</string>
    <string name="grocery_store">Склад с продуктами</string>
    <string name="anasteisha_vlasova">Власова Анастасия</string>
    <string name="Profile">Профиль</string>
    <string name="Director">Директор</string>
    <string name="NAme">Имя</string>
    <string name="Roman">Роман</string>
    <string name="Last_name">Фамилия</string>
    <string name="Nogoev">Ногоев</string>
    <string name="Date_of_birth">Год рождения</string>
    <string name="_21_01_2002">21.01.2002</string>
    <string name="Gender">Пол</string>
    <string name="Male">Мужской</string>
    <string name="Phone">Телефон</string>
    <string name="_0777_777_777">0777 777 777</string>
    <string name="Napoleon_cake">Торт наполеон</string>
    <string name="Structure">Состав</string>
    <string name="Info_about_napoleon_cake">Торт, по форме напоминающий двууголку, состоял всего из двух основных компонентов: заварного крема и коржей из бездрожжевого слоеного теста. На приеме, конечно же, заметили, что торт похож на головной убор Бонапарта, поэтому десерт мгновенно окрестили «Наполеоном». Название прижилось</string>
    <string name="Eggs">Яйца</string>
    <string name="About_us">О нас</string>
    <string name="Timiryazeva_74">Адрес Тимирязева 74</string>
    <string name="Instagram">Instagram</string>
    <string name="_0708_540_691">0708 540 691</string>
    <string name="Help">Помощь</string>
    <string name="vector">vector</string>
</resources>