<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".ProfileFragment">

    <ImageView
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/vector"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/Profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_96dp"
        android:background="@drawable/circle_img"
        android:contentDescription="@string/image"
        android:src="@drawable/img_worker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_256dp"
        android:text="@string/Director"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/specialty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="@string/NAme"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/Roman"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="@dimen/_6dp"
            android:text="@string/Last_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/Nogoev"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="@dimen/_6dp"
            android:text="@string/Date_of_birth"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/_21_01_2002"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="@dimen/_6dp"
            android:text="@string/Gender"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/Male"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="@dimen/_6dp"
            android:text="@string/Phone"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/_0777_777_777"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>