<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".StructureFragment">

    <ImageView
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/Structure"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_96dp"
        android:background="@drawable/circle_img"
        android:contentDescription="@string/image"
        android:src="@drawable/img_large12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_256dp"
        android:text="@string/Napoleon_cake"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_305dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/Info_about_napoleon_cake"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>