<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".AboutUsFragment">

    <ImageView
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/vector"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/About_us"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_230dp"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_large14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_270dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:layout_margin="@dimen/_10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/img_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6dp"
                android:text="@string/Timiryazeva_74"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/corner_radius"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_margin="@dimen/_10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6dp"
                android:text="@string/Instagram"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/corner_radius"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_margin="@dimen/_10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_telegram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6dp"
                android:text="@string/_0708_540_691"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/corner_radius"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_margin="@dimen/_10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_whatsapp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6dp"
                android:text="@string/_0708_540_691"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/corner_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_16dp"
                android:text="@string/Help"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>